[project]
name = "stravart"
version = "0.1.0"
description = "GPS art route generator"
readme = "README.md"
authors = [
    { name = "vierui", email = "ruivieira.pro@gmail.com" }
]
requires-python = ">=3.10.12"
dependencies = [
    "osmnx>=2.0.0",
    "networkx>=3.0",
    "folium>=0.15",
    "gpxpy>=1.6",
    "numpy>=1.24",
    "scipy>=1.15.3",
]

[project.scripts]
stravart = "stravart.cli:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
